agregue visualizar entrada y la generacion del qr para que se pueda descargar blablabla